--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
-/* Aula inicial :D */
+/* Reset do CSS */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
   background-color: #ffffff;
@@ -8,16 +13,27 @@ body {
   margin: 0;
 }
 
-.nav-menu {
-/*   background-color: tomato; */
-  
+header {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(45deg, #000000 0%, #303040 100%);
+}
+
+/* Se a tela tiver o tamanho minímo de 600px, carrega os elementos internos */
+@media (min-height: 700px) {
+    header {
+        height: 60vh;
+    }
+}
+
+.nav-menu {  
   background-image: linear-gradient(45deg, #FF6347 0%, #FF4550 20%);
   
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
-  display: block;
+  width: 100vw;
 }
 
 .nav-menu ul {
@@ -29,19 +45,22 @@ body {
 .nav-menu li {
   /* Alterando o estilo da lista dentro do elemento de class 'menu'*/
   list-style: none;
-/*   padding: 1.5%; */
 }
 
-.header {
+.nav-menu a {
+    padding: 10px;
+    /* background-color: blue; */
+    display: block;
+}
+
+/* .header {
   background-image: linear-gradient(45deg, #000000 0%, #303040 100%);
   
-/*   background-color: #000000; */
-  width: 100vw;
-  height: 20vh;
-/*   position: relative; */
-/*   display: block; */
-  padding: 7.75em 0 5.25em; /* levar isso para uma div interna */
-}
+  background-color: #000000;
+  width: 50vw;
+  height: 30vh;
+  padding: 7.75em 0 5.25em; /* levar isso para uma div interna
+} */
 
 a {
   /* Estou removendo o underscore dos elementos <a> */
@@ -58,8 +77,46 @@ a:hover {
 .site-title {
   color: whitesmoke;
   text-align: center;
+  padding: 0.3em;
 }
 
+.site-title {
+    font-size: 4em;
+}
 .site-subtitle {
   font-style: italic;
+}
+
+.portfolio {
+    padding: 2em;
+}
+
+.portfolio h2 {
+    margin-bottom: 1em;
+}
+
+.img-portfolio {
+    height: 250px;
+    width: 250px;
+    object-fit: cover;
+    object-position: left;
+}
+
+.portfolio .grid {
+    display: grid;
+    gap: 2em;
+    justify-content: center;
+}
+
+@media (min-width: 620px) {
+    .portfolio .grid {
+        grid-template-columns: repeat(2, 310px);
+    }
+}
+
+@media (min-width: 930px) {
+    .portfolio .grid {
+        grid-template-columns: repeat(3, 310px);
+        height: calc(70vh);
+    }
 }
